release 1.2 (03-2010)
- Fixed issue 505
  https://jersey.dev.java.net/issues/show_bug.cgi?id=505
  Fixed error in the multipart message body writer when the
  Content-Type header value is explicitly set and the value is a string.
- Fixed issue 504
  https://jersey.dev.java.net/issues/show_bug.cgi?id=504
  Upgrade Simple HTTP server to 4.1.20.
- Fixed issue 484
  https://jersey.dev.java.net/issues/show_bug.cgi?id=484
  Change the Guice dependency to depend on Guice from the maven central
  repository rather than GuiceyFruit.
- Added com.sun.jersey.api.JResponse, which is a type safe alternative to
  javax.ws.rs.core.Response that preserves the type information of response
  entity thus it is not necessary to utilize javax.ws.rs.core.GenericEntity.
  It provides equivalent functonality to Response.
  JResponse may be extended in combination with JResponse.AJResponseBuilder
  specialization when building responses.
- Fixed issue 485
  https://jersey.dev.java.net/issues/show_bug.cgi?id=485
  When a ServletContainer is used as a servlet filter and the feature
  ServletContainer.FEATURE_FILTER_FORWARD_ON_404 is set to true then enable the
  next filter in the chain to be invoked if Jersey or the application returns a
  404 with no entity body.
- Fixed issue 361
  https://jersey.dev.java.net/issues/show_bug.cgi?id=361
  Introduced new feature (FeaturesAndProperties.FEATURE_XMLROOTELEMENT_PROCESSING)
  which enables getting XmlRootElement annotations and deriving name for list
  from its name property. First letter "decapitalization" is not done
  when this feature is enabled.
- Fixed issue 480
  https://jersey.dev.java.net/issues/show_bug.cgi?id=480
  An error in the decoding of "application/x-www-form-urlencoded" information
  will result in a 400 (Client error) response.
- Fixed issue 471
  https://jersey.dev.java.net/issues/show_bug.cgi?id=471
  LoggingFilter should not have side-effects on the response and retain
  content length information.